--- a/src/app/features/protein-powder/protein-powder.component.html
+++ b/src/app/features/protein-powder/protein-powder.component.html
@@ -1,1 +1,48 @@
-<p>protein-powder works!</p>
+<div class="protein-powder-page">
+    <div class="banner">
+        <h1>Protein Powders</h1>
+        <p>Discover top-quality protein powders for your fitness journey.</p>
+    </div>
+
+    <div class="product-list">
+        <!-- Protein Powder 1 -->
+        <div class="product-item">
+            <img src="https://images.pexels.com/photos/2280543/pexels-photo-2280543.jpeg?auto=compress&cs=tinysrgb&w=250" 
+                 alt="Whey Protein" 
+                 class="product-image">
+            <h3 class="product-name">Whey Protein</h3>
+            <p class="product-price">$49.99</p>
+            <button class="buy-now-button">Buy Now</button>
+        </div>
+
+        <!-- Protein Powder 2 -->
+        <div class="product-item">
+            <img src="https://images.pexels.com/photos/3825518/pexels-photo-3825518.jpeg?auto=compress&cs=tinysrgb&w=250" 
+                 alt="Vegan Protein" 
+                 class="product-image">
+            <h3 class="product-name">Vegan Protein</h3>
+            <p class="product-price">$39.99</p>
+            <button class="buy-now-button">Buy Now</button>
+        </div>
+
+        <!-- Protein Powder 3 -->
+        <div class="product-item">
+            <img src="https://images.pexels.com/photos/3912389/pexels-photo-3912389.jpeg?auto=compress&cs=tinysrgb&w=250" 
+                 alt="Isolate Protein" 
+                 class="product-image">
+            <h3 class="product-name">Isolate Protein</h3>
+            <p class="product-price">$59.99</p>
+            <button class="buy-now-button">Buy Now</button>
+        </div>
+
+        <!-- Protein Powder 4 -->
+        <div class="product-item">
+            <img src="https://images.pexels.com/photos/5642024/pexels-photo-5642024.jpeg?auto=compress&cs=tinysrgb&w=250" 
+                 alt="Casein Protein" 
+                 class="product-image">
+            <h3 class="product-name">Casein Protein</h3>
+            <p class="product-price">$44.99</p>
+            <button class="buy-now-button">Buy Now</button>
+        </div>
+    </div>
+</div>
